--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 						<nav>
 							<ul>
 								<!--<li><a href="#intro">Intro</a></li>-->
-								<li><a href="#work1">Work</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#StockX">Stock X</a></li>
+								<li><a href="#work1">Work1</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -54,19 +54,19 @@
 							</article>-->
 
 						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
+							<article id="StockX">
+								<h2 class="major">Stock X</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Stock x is a web marketplace where people can sell and buy their valuable objects, the main purpose is to resell sneakers. </p>
+								<p>In this study case i downloaded the data set that Stock X it self made public, here i try to answer some basic question about the data with some conclusions from the point of view of the owner of the platform to help imporve the gross value of the sales. In this project i used python with 2 main libraries Matplotlib  for the charts and pandas to manipulate the data. </p>
 							    
-								<li><a href="#" class="button large">View Project</a></li>
+								<li><a href="https://github.com/NicolaDanieli/Stock-X/blob/main/STOCK%20X.ipynb" class="button large">View Project<a></a></li>
 							    
 							</article>
 
-							<!-- Work -->
+							<!-- Work1 -->
 							<article id="work1">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Work1</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
