--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<!-- Work -->
 							<article id="StockX">
 								<h2 class="major">Stock X</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/stockx.jpg" alt="" /></span>
 								<p>Stock x is a web marketplace where people can sell and buy their valuable objects, the main purpose is to resell sneakers. </p>
 								<p>In this study case i downloaded the data set that Stock X it self made public, here i try to answer some basic question about the data with some conclusions from the point of view of the owner of the platform to help imporve the gross value of the sales. In this project i used python with 2 main libraries Matplotlib  for the charts and pandas to manipulate the data. </p>
 							    
